--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,15 @@ dependencies:
   shared_preferences: ^2.0.7
   get_it: ^7.2.0
   image_picker: ^0.8.4+1
+  open_file: ^3.2.1
+  path_provider: ^2.0.4
+  firebase_database: ^7.1.1
+  firebase_storage: ^10.0.1
+  firebase_core: ^1.6.0
+  http: ^0.13.3
+  cached_network_image: ^3.1.0
+  url_launcher: ^6.0.10 #config ios
+  photo_view: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +58,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+#  assets:
+#    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
