--- a/electricity_manager/pubspec.yaml
+++ b/electricity_manager/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cached_network_image: ^3.1.0
   url_launcher: ^6.0.10 #config ios
   photo_view: ^0.12.0
+  equatable: ^2.0.3
+  flutter_bloc: ^7.2.0
 
 dev_dependencies:
   flutter_test:
