--- a/electricity_manager/pubspec.yaml
+++ b/electricity_manager/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -31,6 +31,9 @@ dependencies:
   flutter_svg: ^0.22.0
   font_awesome_flutter: ^9.2.0
   fl_chart: ^0.40.2
+  syncfusion_flutter_xlsio: ^19.3.55-beta
+  path_provider_platform_interface: ^2.0.1
+
 
 dev_dependencies:
   flutter_test:
