--- a/electricity_manager/pubspec.yaml
+++ b/electricity_manager/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -33,7 +33,7 @@ dependencies:
   fl_chart: ^0.40.2
   syncfusion_flutter_xlsio: ^19.3.55-beta
   path_provider_platform_interface: ^2.0.1
-
+  permission_handler: ^8.0.1 # setup on iOS
 
 dev_dependencies:
   flutter_test:
